# onekibu

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml  test.sh
.github/workflows/: ci.yml
firmware/: Cargo.toml  build.rs  nrf52840-dfu.x  nrf52840-dk.x  nrf52840-dongle.x  nrf52840-mdk-dongle.x  solo.x
firmware/src/: lib.rs  main.rs
firmware/src/board/: mod.rs  nrf52840.rs  solo.rs
xtask/: Cargo.toml
xtask/src/: main.rs
